# passport

./: .gitignore  Dockerfile  Dockerfile_dev  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
passport/: .coveragerc  docker-entrypoint.sh
passport/locale/ru/LC_MESSAGES/: django.mo  django.po
passport/main/: admin.py  charts.py  documents.py  filters.py  forms.py  lookups.py  models.py  selectors.py  tables.py  urls.py  views.py
passport/main/management/commands/: populate_db.py
passport/main/migrations/: 0001_initial.py  0002.py  0002_alter_series_name.py  0003_alter_city_options_alter_distributor_options_and_more.py  0003_alter_distributor_name_alter_order_document_and_more.py
passport/main/templatetags/: custom_filters.py
passport/main/tests/: test_admin.py  test_filters.py  test_forms.py  test_models.py  test_tables.py  test_urls.py  test_views.py
passport/passport/: dev_settings.py  settings.py  test_settings.py  urls.py
passport/static/css/: sidebars.css
passport/static/js/: switch.js
passport/templates/: common_delete.html  common_edit.html  common_list.html  common_list_edit.html  default.html  generic_list_edit.html  home.html  incomplete.html  item_edit.html  items.html  login.html  logout.html  modal_delete.html  order_detail.html  order_list.html  order_list_create.html  set_detail.html  set_edit.html  set_list.html
passport/templates/base/: base.html  create_form.html  default.html  filter.html  navbar.html
passport/templates/users/: login.html
passport/users/migrations/: 0001_initial.py
