[tool.poetry]
name = "passport"
version = "0.2.0"
description = "Packing list management tool"
authors = ["Nyaaa <1457047+Nyaaa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
python-dotenv = "^0.21.0"
django-filter = "^22.1"
django-bootstrap-v5 = "^1.0.11"
psycopg2 = "^2.9.5"
django-cachalot = "^2.5.2"
django-ajax-selects = "^2.2.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
