[tool.poetry]
name = "passport"
version = "0.3.1"
description = "Packing list management tool"
authors = ["Nyaaa <1457047+Nyaaa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
python-dotenv = "^0.21.0"
django-filter = "^22.1"
django-bootstrap-v5 = "^1.0.11"
django-cachalot = "^2.5.2"
django-ajax-selects = "^2.2.0"
django-tables2 = "^2.5.1"
tablib = {extras = ["ods", "xlsx"], version = "^3.3.0"}
django-widget-tweaks = "^1.4.12"
pillow = "^9.4.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"
django-stubs = "^1.14.0"
faker = "^17.0.0"
coverage = "^7.2.1"
python-coveralls = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
